# spyglass

./: README.org  infervisor.py  pyproject.toml
spyglass/: EDA.py  __init__.py  _plotly_model_imaging.py  _utils.py  infervisor.py  model_imaging.py  sk_imaging.py  spyglass.py  utils.py
spyglass/_fig_library/: __init__.py  _plotly_fig_library.py  _sns_fig_library.py
tests/: test_spyglass.py
