[tool.poetry]
name = "spyglass"
version = "0.1.0"
description = "consistent and convenient visualization tools built to expose standard matplotlib figure objects for customization"
authors = ["Panayotis Manganaris <panos.manganaris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
