[tool.poetry]
name = "spyglass"
version = "0.1.2"
description = "consistent and convenient visualization tools built to expose standard matplotlib figure objects for customization"
authors = ["Panayotis Manganaris <panos.manganaris@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
numpy = "^1.21.4"
pandas = "^1.3.4"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
