[tool.poetry]
name = "spyglass"
version = "0.1.2"
description = "consistent and convenient visualization tools built to return standard matplotlib and seaborn figure objects for customization"
authors = ["Panayotis Manganaris <panos.manganaris@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
matplotlib = "^3.1.0"
pandas = "^1.3.4"
seaborn = "^0.11.2"
mplcursors = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
